--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      run: |
+        git config --local user.email "${{ secrets.GH_EMAIL }}"
+        git config --local user.name "${{ secrets.GH_USERNAME }}"
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
