--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -7,17 +7,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Configure username
+      run: |
+        git config --local user.email "${{ secrets.GH_EMAIL }}"
+        git config --local user.name "${{ secrets.GH_USERNAME }}"
+    - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
     - name: Build with Gradle
-      run: gradle fatJar
+      run: gradle -Prelease.useAutomaticVersion=true release
+    - uses: actions/upload-artifact@v2
+      with:
+        name: pearl.jar
+        path: build/libs/pearl*.jar
