--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,8 @@ intellij {
     version '2020.2'
 }
 patchPluginXml {
-    sinceBuild '201'
-    untilBuild '202'
+    sinceBuild '201.*'
+    untilBuild '202.*'
     changeNotes """
       Initial beta release of the plugin.It supports only selection and cursor"""
 }
