--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -21,7 +21,8 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Build with Gradle
-      run: gradle -Prelease.useAutomaticVersion=true release
+      run: gradle fatJar
+#      run: gradle -Prelease.useAutomaticVersion=true release
     - uses: actions/upload-artifact@v2
       with:
         name: pearl.jar
